Lowered cover curved 2px on mobile to fix separation glitch

--- a/app/css/sections.css
+++ b/app/css/sections.css
@@ -41,7 +41,7 @@ section#cover {
       background-position: bottom;
       width: 100%;
       height: 320px;
-      top: 50px;
+      top: 52px;
       left: 0;
       z-index: 1;
       position: absolute;
